--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Plataforma de Alumno - PSI</title>
+  <title>Plataforma de Alumno - Eddis</title>
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Font Awesome -->
@@ -158,64 +158,117 @@
                 </div>
               </div>
 
-              <!-- Card de Asistencia y Progreso -->
-              <div class="bg-white dark:bg-card-dark rounded-lg shadow-sm border border-gray-200 dark:border-border-dark p-6">
+              <!-- Card de Asistencia y Progreso - Mejorada -->
+              <div class="academic-progress-card rounded-lg shadow-sm p-6 fade-in-up">
                 <div class="flex items-center justify-between mb-6">
-                  <h4 class="text-lg font-medium text-gray-900 dark:text-text-dark">Asistencia y Progreso</h4>
-                  <i class="fa-solid fa-chart-line text-gray-400"></i>
+                  <h4 class="text-lg font-semibold text-gray-900 dark:text-text-dark">Tu Progreso Académico</h4>
+                  <div class="flex items-center space-x-2">
+                    <div id="progressStatus" class="status-badge px-3 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+                      En progreso
+                    </div>
+                  </div>
                 </div>
 
-                <div class="flex flex-col lg:flex-row items-center gap-8">
-                  <!-- Progreso Circular -->
-                  <div class="flex-shrink-0">
-                    <div class="relative w-40 h-40">
+                <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+                  <!-- Progreso Circular Mejorado -->
+                  <div class="flex flex-col items-center">
+                    <div class="relative w-32 h-32 mb-4">
                       <!-- Background Circle -->
-                      <svg class="w-40 h-40 transform -rotate-90" viewBox="0 0 144 144">
+                      <svg class="w-32 h-32 transform -rotate-90" viewBox="0 0 144 144">
                         <circle cx="72" cy="72" r="64" stroke="currentColor" stroke-width="8" fill="none"
                           class="text-gray-200 dark:text-gray-600" />
                         <!-- Progress Circle -->
                         <circle id="progressCircle" cx="72" cy="72" r="64" stroke="currentColor" stroke-width="8"
                           fill="none" stroke-linecap="round"
-                          class="text-primary-darkmode transition-all duration-1000 ease-out" stroke-dasharray="402.12"
+                          class="progress-circle-enhanced text-blue-600 transition-all duration-1000 ease-out" stroke-dasharray="402.12"
                           stroke-dashoffset="402.12" />
                       </svg>
                       <!-- Percentage Text -->
                       <div class="absolute inset-0 flex items-center justify-center">
                         <div class="text-center">
-                          <div id="progressPercentage" class="text-4xl font-bold text-gray-900 dark:text-text-dark">0%</div>
-                          <div class="text-xs text-gray-500 dark:text-text-dark-secondary mt-1">Completado</div>
+                          <div id="progressPercentage" class="text-2xl font-bold text-gray-900 dark:text-text-dark">0%</div>
+                          <div class="text-xs text-gray-500 dark:text-text-dark-secondary">Completado</div>
                         </div>
+                      </div>
+                    </div>
+                    <div class="text-center">
+                      <div class="text-sm font-medium text-gray-900 dark:text-text-dark">Avance del Curso</div>
+                      <div id="progressMessage" class="text-xs text-gray-500 dark:text-text-dark-secondary mt-1">
+                        Continúa así, vas muy bien
                       </div>
                     </div>
                   </div>
 
                   <!-- Estadísticas de Asistencia -->
-                  <div class="flex-1 w-full">
+                  <div class="lg:col-span-2">
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                       <!-- Asistencia -->
-                      <div class="text-center">
-                        <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-3">
-                          <i class="fa-solid fa-calendar-check text-green-600 text-xl"></i>
+                      <div class="attendance-gradient rounded-lg p-4">
+                        <div class="flex items-center justify-between mb-3">
+                          <div class="flex items-center space-x-2">
+                            <div class="w-8 h-8 bg-green-100 dark:bg-green-800 rounded-full flex items-center justify-center">
+                              <i class="fa-solid fa-user-check text-green-600 dark:text-green-300 text-sm stat-icon"></i>
+                            </div>
+                            <span class="text-sm font-medium text-gray-700 dark:text-text-dark">Asistencia</span>
+                          </div>
+                          <div id="attendanceStatus" class="px-2 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800">
+                            Excelente
+                          </div>
                         </div>
-                        <div class="text-2xl font-bold text-gray-900 dark:text-text-dark" id="attendancePercentage">0%</div>
-                        <div class="text-sm text-gray-500 dark:text-text-dark-secondary">Asistencia</div>
-                        <div class="text-xs text-gray-400 dark:text-gray-dark mt-1">
-                          <span id="attendedClasses">0</span> de <span id="totalClasses">0</span> clases
+                        <div class="space-y-2">
+                          <div class="flex items-baseline space-x-2">
+                            <span id="attendancePercentage" class="text-2xl font-bold text-green-600">0%</span>
+                            <span class="text-sm text-gray-500 dark:text-text-dark-secondary">de asistencia</span>
+                          </div>
+                          <div class="text-sm text-gray-600 dark:text-text-dark-secondary">
+                            <span id="attendedClasses">0</span> de <span id="totalClasses">0</span> clases asistidas
+                          </div>
+                          <div class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2">
+                            <div id="attendanceBar" class="attendance-progress-bar bg-green-500 h-2 rounded-full" style="width: 0%"></div>
+                          </div>
                         </div>
                       </div>
 
-                      <!-- Horas de Estudio -->
-                      <div class="text-center">
-                        <div class="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mx-auto mb-3">
-                          <i class="fa-solid fa-clock text-blue-600 text-xl"></i>
+                      <!-- Rendimiento Académico -->
+                      <div class="performance-gradient rounded-lg p-4">
+                        <div class="flex items-center justify-between mb-3">
+                          <div class="flex items-center space-x-2">
+                            <div class="w-8 h-8 bg-blue-100 dark:bg-blue-800 rounded-full flex items-center justify-center">
+                              <i class="fa-solid fa-chart-line text-blue-600 dark:text-blue-300 text-sm stat-icon"></i>
+                            </div>
+                            <span class="text-sm font-medium text-gray-700 dark:text-text-dark">Rendimiento</span>
+                          </div>
                         </div>
-                        <div class="text-2xl font-bold text-gray-900 dark:text-text-dark" id="studyHours">0:00</div>
-                        <div class="text-sm text-gray-500 dark:text-text-dark-secondary">Horas de Estudio</div>
-                        <div class="text-xs text-gray-400 dark:text-gray-dark mt-1">Tiempo total</div>
+                        <div class="space-y-2">
+                          <div class="flex items-baseline space-x-2">
+                            <span id="performanceScore" class="text-2xl font-bold text-blue-600">--</span>
+                            <span class="text-sm text-gray-500 dark:text-text-dark-secondary">promedio</span>
+                          </div>
+                          <div id="performanceMessage" class="text-sm text-gray-600 dark:text-text-dark-secondary">
+                            Mantén el buen trabajo
+                          </div>
+                          <div class="flex items-center space-x-2 text-xs text-gray-500 dark:text-text-dark-secondary">
+                            <i class="fa-solid fa-clock"></i>
+                            <span id="studyTime">Tiempo de estudio: <span id="studyHours">0:00</span></span>
+                          </div>
+                        </div>
                       </div>
                     </div>
 
-
+                    <!-- Información adicional -->
+                    <div class="mt-4 p-4 academic-tip rounded-lg">
+                      <div class="flex items-start space-x-3">
+                        <div class="w-6 h-6 bg-yellow-100 dark:bg-yellow-800 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
+                          <i class="fa-solid fa-lightbulb text-yellow-600 dark:text-yellow-300 text-xs"></i>
+                        </div>
+                        <div class="flex-1">
+                          <div class="text-sm font-medium text-gray-900 dark:text-text-dark mb-1">Consejo Académico</div>
+                          <div id="academicTip" class="text-sm text-gray-600 dark:text-text-dark-secondary">
+                            Mantén una asistencia regular para aprovechar al máximo tu curso
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -312,7 +365,7 @@
                     <span id="examFeeDue" class="text-sm text-gray-900"></span>
                   </div>
                   <button id="payExamFeeButton"
-                    class="hidden w-full bg-purple-600 hover:bg-purple-700 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-200">
+                    class="w-full bg-purple-600 hover:bg-purple-700 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-200 hidden">
                     <i class="fa-solid fa-graduation-cap mr-2"></i>
                     Pagar Examen
                   </button>
