--- a/pages/index.html
+++ b/pages/index.html
@@ -158,115 +158,130 @@
                 </div>
               </div>
 
-              <!-- Card de Asistencia y Progreso - Mejorada -->
-              <div class="academic-progress-card rounded-lg shadow-sm p-6 fade-in-up">
-                <div class="flex items-center justify-between mb-6">
-                  <h4 class="text-lg font-semibold text-gray-900 dark:text-text-dark">Tu Progreso Académico</h4>
-                  <div class="flex items-center space-x-2">
+              <!-- Card de Asistencia y Progreso - Simplificada -->
+              <div class="academic-progress-card rounded-lg shadow-sm p-4 md:p-6 fade-in-up">
+                <!-- Versión Desktop -->
+                <div class="hidden md:block">
+                  <div class="flex items-center justify-between mb-6">
+                    <h4 class="text-lg font-semibold text-gray-900 dark:text-text-dark">Tu Progreso Académico</h4>
                     <div id="progressStatus" class="status-badge px-3 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
                       En progreso
                     </div>
                   </div>
-                </div>
 
-                <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
-                  <!-- Progreso Circular Mejorado -->
-                  <div class="flex flex-col items-center">
-                    <div class="relative w-32 h-32 mb-4">
-                      <!-- Background Circle -->
-                      <svg class="w-32 h-32 transform -rotate-90" viewBox="0 0 144 144">
-                        <circle cx="72" cy="72" r="64" stroke="currentColor" stroke-width="8" fill="none"
-                          class="text-gray-200 dark:text-gray-600" />
-                        <!-- Progress Circle -->
-                        <circle id="progressCircle" cx="72" cy="72" r="64" stroke="currentColor" stroke-width="8"
-                          fill="none" stroke-linecap="round"
-                          class="progress-circle-enhanced text-blue-600 transition-all duration-1000 ease-out" stroke-dasharray="402.12"
-                          stroke-dashoffset="402.12" />
-                      </svg>
-                      <!-- Percentage Text -->
-                      <div class="absolute inset-0 flex items-center justify-center">
-                        <div class="text-center">
-                          <div id="progressPercentage" class="text-2xl font-bold text-gray-900 dark:text-text-dark">0%</div>
-                          <div class="text-xs text-gray-500 dark:text-text-dark-secondary">Completado</div>
+                  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                    <!-- Progreso Circular -->
+                    <div class="flex flex-col items-center">
+                      <div class="relative w-32 h-32 mb-4">
+                        <svg class="w-32 h-32 transform -rotate-90" viewBox="0 0 144 144">
+                          <circle cx="72" cy="72" r="64" stroke="currentColor" stroke-width="8" fill="none"
+                            class="text-gray-200 dark:text-gray-600" />
+                          <circle id="progressCircle" cx="72" cy="72" r="64" stroke="currentColor" stroke-width="8"
+                            fill="none" stroke-linecap="round"
+                            class="progress-circle-enhanced text-blue-600 transition-all duration-1000 ease-out" stroke-dasharray="402.12"
+                            stroke-dashoffset="402.12" />
+                        </svg>
+                        <div class="absolute inset-0 flex items-center justify-center">
+                          <div class="text-center">
+                            <div id="progressPercentage" class="text-2xl font-bold text-gray-900 dark:text-text-dark">0%</div>
+                            <div class="text-xs text-gray-500 dark:text-text-dark-secondary">Completado</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="text-center">
+                        <div class="text-sm font-medium text-gray-900 dark:text-text-dark">Avance del Curso</div>
+                        <div id="progressMessage" class="text-xs text-gray-500 dark:text-text-dark-secondary mt-1">
+                          Continúa así, vas muy bien
                         </div>
                       </div>
                     </div>
-                    <div class="text-center">
-                      <div class="text-sm font-medium text-gray-900 dark:text-text-dark">Avance del Curso</div>
-                      <div id="progressMessage" class="text-xs text-gray-500 dark:text-text-dark-secondary mt-1">
-                        Continúa así, vas muy bien
+
+                    <!-- Asistencia -->
+                    <div class="attendance-gradient rounded-lg p-4">
+                      <div class="flex items-center justify-between mb-3">
+                        <div class="flex items-center space-x-2">
+                          <div class="w-8 h-8 bg-green-100 dark:bg-green-800 rounded-full flex items-center justify-center">
+                            <i class="fa-solid fa-user-check text-green-600 dark:text-green-300 text-sm stat-icon"></i>
+                          </div>
+                          <span class="text-sm font-medium text-gray-700 dark:text-text-dark">Asistencia</span>
+                        </div>
+                        <div id="attendanceStatus" class="px-2 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800">
+                          Excelente
+                        </div>
+                      </div>
+                      <div class="space-y-2">
+                        <div class="flex items-baseline space-x-2">
+                          <span id="attendancePercentage" class="text-2xl font-bold text-green-600">0%</span>
+                          <span class="text-sm text-gray-500 dark:text-text-dark-secondary">de asistencia</span>
+                        </div>
+                        <div class="text-sm text-gray-600 dark:text-text-dark-secondary">
+                          <span id="attendedClasses">0</span> de <span id="totalClasses">0</span> clases asistidas
+                        </div>
+                        <div class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2">
+                          <div id="attendanceBar" class="attendance-progress-bar bg-green-500 h-2 rounded-full" style="width: 0%"></div>
+                        </div>
                       </div>
                     </div>
                   </div>
 
-                  <!-- Estadísticas de Asistencia -->
-                  <div class="lg:col-span-2">
-                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
-                      <!-- Asistencia -->
-                      <div class="attendance-gradient rounded-lg p-4">
-                        <div class="flex items-center justify-between mb-3">
-                          <div class="flex items-center space-x-2">
-                            <div class="w-8 h-8 bg-green-100 dark:bg-green-800 rounded-full flex items-center justify-center">
-                              <i class="fa-solid fa-user-check text-green-600 dark:text-green-300 text-sm stat-icon"></i>
-                            </div>
-                            <span class="text-sm font-medium text-gray-700 dark:text-text-dark">Asistencia</span>
-                          </div>
-                          <div id="attendanceStatus" class="px-2 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800">
-                            Excelente
-                          </div>
-                        </div>
-                        <div class="space-y-2">
-                          <div class="flex items-baseline space-x-2">
-                            <span id="attendancePercentage" class="text-2xl font-bold text-green-600">0%</span>
-                            <span class="text-sm text-gray-500 dark:text-text-dark-secondary">de asistencia</span>
-                          </div>
-                          <div class="text-sm text-gray-600 dark:text-text-dark-secondary">
-                            <span id="attendedClasses">0</span> de <span id="totalClasses">0</span> clases asistidas
-                          </div>
-                          <div class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2">
-                            <div id="attendanceBar" class="attendance-progress-bar bg-green-500 h-2 rounded-full" style="width: 0%"></div>
-                          </div>
+                  <!-- Consejo académico -->
+                  <div class="mt-4 p-3 academic-tip rounded-lg">
+                    <div class="flex items-start space-x-3">
+                      <div class="w-5 h-5 bg-yellow-100 dark:bg-yellow-800 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
+                        <i class="fa-solid fa-lightbulb text-yellow-600 dark:text-yellow-300 text-xs"></i>
+                      </div>
+                      <div class="flex-1">
+                        <div id="academicTip" class="text-sm text-gray-600 dark:text-text-dark-secondary">
+                          Mantén una asistencia regular para aprovechar al máximo tu curso
                         </div>
                       </div>
+                    </div>
+                  </div>
+                </div>
 
-                      <!-- Rendimiento Académico -->
-                      <div class="performance-gradient rounded-lg p-4">
-                        <div class="flex items-center justify-between mb-3">
-                          <div class="flex items-center space-x-2">
-                            <div class="w-8 h-8 bg-blue-100 dark:bg-blue-800 rounded-full flex items-center justify-center">
-                              <i class="fa-solid fa-chart-line text-blue-600 dark:text-blue-300 text-sm stat-icon"></i>
-                            </div>
-                            <span class="text-sm font-medium text-gray-700 dark:text-text-dark">Rendimiento</span>
-                          </div>
-                        </div>
-                        <div class="space-y-2">
-                          <div class="flex items-baseline space-x-2">
-                            <span id="performanceScore" class="text-2xl font-bold text-blue-600">--</span>
-                            <span class="text-sm text-gray-500 dark:text-text-dark-secondary">promedio</span>
-                          </div>
-                          <div id="performanceMessage" class="text-sm text-gray-600 dark:text-text-dark-secondary">
-                            Mantén el buen trabajo
-                          </div>
-                          <div class="flex items-center space-x-2 text-xs text-gray-500 dark:text-text-dark-secondary">
-                            <i class="fa-solid fa-clock"></i>
-                            <span id="studyTime">Tiempo de estudio: <span id="studyHours">0:00</span></span>
-                          </div>
+                <!-- Versión Mobile - Compacta -->
+                <div class="md:hidden">
+                  <div class="flex items-center justify-between mb-4">
+                    <h4 class="text-base font-semibold text-gray-900 dark:text-text-dark">Progreso</h4>
+                    <div id="progressStatusMobile" class="px-2 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+                      En progreso
+                    </div>
+                  </div>
+
+                  <div class="flex items-center space-x-4">
+                    <!-- Progreso circular pequeño -->
+                    <div class="flex-shrink-0">
+                      <div class="relative w-16 h-16">
+                        <svg class="w-16 h-16 transform -rotate-90" viewBox="0 0 72 72">
+                          <circle cx="36" cy="36" r="32" stroke="currentColor" stroke-width="6" fill="none"
+                            class="text-gray-200 dark:text-gray-600" />
+                          <circle id="progressCircleMobile" cx="36" cy="36" r="32" stroke="currentColor" stroke-width="6"
+                            fill="none" stroke-linecap="round"
+                            class="text-blue-600 transition-all duration-1000 ease-out" stroke-dasharray="201.06"
+                            stroke-dashoffset="201.06" />
+                        </svg>
+                        <div class="absolute inset-0 flex items-center justify-center">
+                          <div id="progressPercentageMobile" class="text-sm font-bold text-gray-900 dark:text-text-dark">0%</div>
                         </div>
                       </div>
                     </div>
 
-                    <!-- Información adicional -->
-                    <div class="mt-4 p-4 academic-tip rounded-lg">
-                      <div class="flex items-start space-x-3">
-                        <div class="w-6 h-6 bg-yellow-100 dark:bg-yellow-800 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
-                          <i class="fa-solid fa-lightbulb text-yellow-600 dark:text-yellow-300 text-xs"></i>
-                        </div>
-                        <div class="flex-1">
-                          <div class="text-sm font-medium text-gray-900 dark:text-text-dark mb-1">Consejo Académico</div>
-                          <div id="academicTip" class="text-sm text-gray-600 dark:text-text-dark-secondary">
-                            Mantén una asistencia regular para aprovechar al máximo tu curso
+                    <!-- Stats compactos -->
+                    <div class="flex-1 space-y-2">
+                      <div class="flex items-center justify-between">
+                        <span class="text-sm text-gray-600 dark:text-text-dark-secondary">Asistencia</span>
+                        <div class="flex items-center space-x-2">
+                          <span id="attendancePercentageMobile" class="text-sm font-semibold text-green-600">0%</span>
+                          <div id="attendanceStatusMobile" class="px-2 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800">
+                            Excelente
                           </div>
                         </div>
+                      </div>
+                      <div class="text-xs text-gray-500 dark:text-text-dark-secondary">
+                        <span id="attendedClassesMobile">0</span> de <span id="totalClassesMobile">0</span> clases
+                      </div>
+                      <div class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-1.5">
+                        <div id="attendanceBarMobile" class="bg-green-500 h-1.5 rounded-full transition-all duration-500" style="width: 0%"></div>
                       </div>
                     </div>
                   </div>
