feat: Normalización de fechas con Luxon - Formato dd/mm/aaaa
- Instalación de Luxon para manejo profesional de fechas
- Implementación de funciones formatDate, formatDateShort y formatDateLong
- Normalización de todas las fechas en dashboard.js y script.js
- Conversión de fechas de mock data a formato ISO estándar
- Formato consistente dd/mm/aaaa en toda la aplicación
- Fallback robusto para fechas en diferentes formatos
- Mejora en la experiencia del usuario con fechas legibles

--- a/pages/login.html
+++ b/pages/login.html
@@ -390,7 +390,7 @@
             </div>
             <div class="toggle-option" data-theme="studio">
 
-                <span>Studio Beauty</span>
+                <span>SBeauty</span>
             </div>
         </div>
     </div>
