--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Font Awesome -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://unpkg.com/luxon@3.4.4/build/global/luxon.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Stolzl:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -696,6 +697,18 @@
         });
       }).observe(document.body, { attributes: true });
     })();
+  </script>
+  <script>
+    // Test de Luxon
+    document.addEventListener('DOMContentLoaded', function() {
+      if (typeof luxon !== 'undefined') {
+        console.log('✅ Luxon cargado correctamente');
+        const testDate = luxon.DateTime.fromISO('2024-01-15');
+        console.log('📅 Fecha de prueba:', testDate.toFormat('dd/MM/yyyy'));
+      } else {
+        console.error('❌ Luxon no está disponible');
+      }
+    });
   </script>
 </body>
 
